--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: #C79CA3;
+    background: linear-gradient(to right, #E5CFCE, #FFFFFF)
 }
 
 .nav-bar{
@@ -18,6 +18,19 @@ body{
     width: 40%;
     height: 40%;
     padding-top: 1.5rem;
+    z-index: 1;
+}
+
+.imagem-site img{
+    border-radius: 50% 50% 0 0;
+    width: 20%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: -100px;
+    z-index: 0;
 }
 
 .btn{
@@ -29,7 +42,7 @@ body{
 
 button{
     display: flex;
-    background-color: #EEE1E2;
+    background-color: #C79CA3;
     color: #fff;
     align-items: center;
     text-align: center;
@@ -67,8 +80,6 @@ a{
 
     button{
         display: flex;
-        background-color: #EEE1E2;
-        color: #fff;
         align-items: center;
         text-align: center;
         justify-content: center;
@@ -84,5 +95,11 @@ a{
         display: flex;
         justify-content: center;
         text-align: center;
+    }
+
+    .imagem-site img{
+        width: 45%;
+        height: 45%;
+        margin-top: -30px;
     }
 }
