--- a/style.css
+++ b/style.css
@@ -40,6 +40,18 @@ body{
     padding-top: 1.5rem;
 }
 
+button img {
+    width: 1.3rem;
+    height: 1.3rem;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+
+    border-radius: 50%;
+   
+    object-fit: contain;
+}
+
 button{
     display: flex;
     background-color: #C79CA3;
@@ -57,6 +69,7 @@ button{
 
 button:hover {
     box-shadow: 0 10px 15px -3px #6666664f, 0 4px 6px -2px #6b6b6b17;
+    transition: all 0.30s ease;
 }
 
 a{
